; ModuleID = '/home/carl/AnghaBench/freebsd/sys/compat/linuxkpi/common/src/extr_linux_pci.c_linux_pci_register_driver.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/compat/linuxkpi/common/src/extr_linux_pci.c_linux_pci_register_driver.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pci_driver = type { i32 }

@.str = private unnamed_addr constant [4 x i8] c"pci\00", align 1
@ENXIO = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @linux_pci_register_driver(%struct.pci_driver* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.pci_driver*, align 8
  %4 = alloca i32*, align 8
  store %struct.pci_driver* %0, %struct.pci_driver** %3, align 8
  %5 = call i32* @devclass_find(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  store i32* %5, i32** %4, align 8
  %6 = load i32*, i32** %4, align 8
  %7 = icmp eq i32* %6, null
  br i1 %7, label %8, label %11

8:                                                ; preds = %1
  %9 = load i32, i32* @ENXIO, align 4
  %10 = sub nsw i32 0, %9
  store i32 %10, i32* %2, align 4
  br label %17

11:                                               ; preds = %1
  %12 = load %struct.pci_driver*, %struct.pci_driver** %3, align 8
  %13 = getelementptr inbounds %struct.pci_driver, %struct.pci_driver* %12, i32 0, i32 0
  store i32 0, i32* %13, align 4
  %14 = load %struct.pci_driver*, %struct.pci_driver** %3, align 8
  %15 = load i32*, i32** %4, align 8
  %16 = call i32 @_linux_pci_register_driver(%struct.pci_driver* %14, i32* %15)
  store i32 %16, i32* %2, align 4
  br label %17

17:                                               ; preds = %11, %8
  %18 = load i32, i32* %2, align 4
  ret i32 %18
}

declare dso_local i32* @devclass_find(i8*) #1

declare dso_local i32 @_linux_pci_register_driver(%struct.pci_driver*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
